wordpress-5.4/wp-includes/compat.errors.txt
Traceback (most recent call last):
  File "/Users/nico/repos/php2python/ast2py.py", line 44, in is_valid_code
    ast.parse(src.replace('\x00', ''))
  File "/usr/local/Cellar/python/3.7.7/Frameworks/Python.framework/Versions/3.7/lib/python3.7/ast.py", line 35, in parse
    return compile(source, filename, mode, PyCF_ONLY_AST)
  File "<unknown>", line 219
    return count -= 1
                  ^
SyntaxError: invalid syntax
